gcc/testsuite/gdc.test/compilable/imports/pkg11847/mod11847.d
module pkg11847.mod11847;

int func() { return 2; }
