gcc/testsuite/gdc.test/fail_compilation/fail7178.d
template populate(overloads...)
{
    mixin populate!(.contents);
}
public mixin populate!int;

